# advanced-kernel-cheat-driver-

./: README.md
kernel lots of random/: CMakeLists.txt  buffer_manager.c  buffer_manager.h
kernel lots of random/hwid/: hwid_lock.c  hwid_lock.h  wmi_protection.c  wmi_protection.h
kernel lots of random/include/anti_debug/: anti_debug.h
kernel lots of random/include/crypto/: crypto.h
kernel lots of random/include/pe_utils/: pe_utils.h
kernel lots of random/mapper/: anti_detection.h  kernel_utils.h  secure_mapper.cpp  secure_mapper.h  vulnerable_driver.h
kernel lots of random/src/: driver.c  driver.vcxproj  driver.vcxproj.filters  driver_codes.h  wdf.h
kernel lots of random/src/anti_debug/: anti_debug.cpp
kernel lots of random/src/common/: types.h  utils.c  utils.h
kernel lots of random/src/communication/: driver_interface.h
kernel lots of random/src/loader/: driver_config.h  driver_interface.cpp  driver_interface.h  driver_mapper.cpp  driver_mapper.h  loader.cpp  loader.h  main.cpp  protection.cpp  protection.h
kernel lots of random/src/stealth/: polymorphic_engine.c  stealth_core.c  stealth_types.h
